terraform/plan/s3-best-practices/enable-s3-cross-region-replication/test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: good-test
spec:
  steps:
    - name: kyverno-json
      try:
      - script:
          content: |
            set -e
            kyverno-json scan --policy ../s3-cross-region-replication.yaml --payload ./good-payload.json --output json --bindings ./binding.yaml
          check:
            ($error): ~
            (json_parse($stdout)):
            - results:
              - policy:
                  apiVersion: json.kyverno.io/v1alpha1
                  kind: ValidatingPolicy
                  metadata:
                    name: enable-s3-cross-region-replication
                rules:
                - rule:
                    name: check-s3-cross-region-replication
                  error: ~
                  violations: ~
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: bad-test
spec:
  steps:
    - name: kyverno-json
      try:
      - script:
          content: |
            set -e
            kyverno-json scan --policy ../s3-cross-region-replication.yaml --payload ./bad-payload.json --output json --bindings ./binding.yaml
          check:
            ($error): ~
            (json_parse($stdout)):
            - results:
              - policy:
                  apiVersion: json.kyverno.io/v1alpha1
                  kind: ValidatingPolicy
                  metadata:
                    name: enable-s3-cross-region-replication
                rules:
                - rule:
                    name: check-s3-cross-region-replication
                  error: ~
                  violations:
                  - message: Set S3 Bucket Cross Region Replication status to 'Enabled' (CHECK=spec.rules[0].assert.all[1])
                    errors:
                    - type: FieldValueInvalid
                      value: false
                      detail: 'Expected value: true'
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: bad-test
spec:
  steps:
    - name: kyverno-json
      try:
      - script:
          content: |
            set -e
            kyverno-json scan --policy ../s3-cross-region-replication.yaml --payload ./bad-payload-02.json --output json --bindings ./binding.yaml
          check:
            ($error): ~
            (json_parse($stdout)):
            - results:
              - policy:
                  apiVersion: json.kyverno.io/v1alpha1
                  kind: ValidatingPolicy
                  metadata:
                    name: enable-s3-cross-region-replication
                rules:
                - rule:
                    name: check-s3-cross-region-replication
                  error: ~
                  violations:
                  - message: Use the `aws_s3_bucket_replication_configuration` resource to set the status to Enabled (CHECK=spec.rules[0].assert.all[0])
                    errors:
                    - type: FieldValueInvalid
                      value: false
                      detail: 'Expected value: true'
